--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,9 @@
     "classnames": "^2.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "zod": "^3.23.0",
     "zustand": "^5.0.0"
   },
