--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@codemirror/view": "^6.39.13",
     "axios": "^1.7.0",
     "classnames": "^2.5.1",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
