--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,8 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.0.0",
     "remark-gfm": "^4.0.1",
+    "tone": "^15.1.22",
+    "vexflow": "^5.0.0",
     "zod": "^3.23.0",
     "zustand": "^5.0.0"
   },
