--- a/client/package.json
+++ b/client/package.json
@@ -28,8 +28,10 @@
     "@codemirror/view": "^6.39.13",
     "axios": "^1.7.0",
     "canvas-confetti": "^1.9.4",
+    "code-dojo-shared": "workspace:*",
     "classnames": "^2.5.1",
     "lucide-react": "^0.563.0",
+    "notistack": "^3.0.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
